updated orders and manage for next 13 app dir - set scrollbar to custom colors and width - fixed details page on mobile/desktop

--- a/styles/globals/globals.scss
+++ b/styles/globals/globals.scss
@@ -29,3 +29,28 @@ select {
   font-weight: bold;
   border: 0;
 }
+
+::-webkit-scrollbar {
+  width: 8px;  // Thin scrollbar
+  color: $dark;
+}
+
+::-webkit-scrollbar-track {
+  background-color: $dark; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $secondary;
+  border-radius: 4px;
+
+  &:hover {
+    background-color: $primary;
+  }
+}
+
+// For Firefox
+* {
+  scrollbar-width: thin;
+  scrollbar-color: $dark transparent;
+  color: $secondary;
+}
